# FancyTranslator

./: .gitignore  README.md  pyproject.toml
FancyTranslator/: __init__.py  classes.py  methods.py
