[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfancytelegram"
version = "0.1.0"
authors = [
    { name = "Ashenguard", email = "ashenguard@agmstudio.xyz" },
]
description = "SQL Database management without even a SQL line"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-telegram-bot", "pyfancylogger"
]

[project.urls]
"Homepage" = "https://github.com/agm-studio/easysql"
"Bug Tracker" = "https://github.com/agm-studio/easysql/issues"